--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link type="text/css" href={{url_for('static', filename='bootstrap/css/bootstrap.min.css')}} rel="stylesheet" />
     <link type="text/css" href={{ url_for('static', filename='jplayer/skin/blue.monday/css/jplayer.blue.monday.css')}} rel="stylesheet" />
+    <link type="text/css" href={{ url_for('static', filename='style.css')}} rel="stylesheet" />
     <script type="text/javascript" src="{{url_for('static', filename='jquery/jquery-1.11.2.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='jplayer/jquery.jplayer.min.js')}}"></script>
