--- a/templates/track.html
+++ b/templates/track.html
@@ -8,29 +8,6 @@
 <h2>{{ track.album.name }}</h2>
 <h2>{{ track.pub_year }}</h2>
 
-<script type="text/javascript">
-$(document).ready(function(){
-    new jPlayerPlaylist({
-    jPlayer: "#jquery_jplayer_1",
-    cssSelectorAncestor: "#jp_container_1"
-    }, [
-    {
-    title:"{{ track.name }}",
-    artist:"{{ track.artist.name }}",
-    mp3:"{{ track.file_url }}",
-    poster: "http://www.jplayer.org/audio/poster/The_Stark_Palace_640x360.png"
-    }
-    ], {
-    playlistOptions: {
-    enableRemoveControls: true
-    },
-    swfPath: "/static/jplayer",
-    supplied: "mp3",
-    smoothPlayBar: true,
-    keyEnabled: true,
-    audioFullScreen: false // Allows the audio poster to go full screen via keyboard
-    });
-});
-</script>
+<script type="text/javascript"></script>
 
 {% endblock %}
